--- a/style.css
+++ b/style.css
@@ -1,23 +1,17 @@
 @import url('variables.css');
 body{
-    margin-left:130px;
-    margin-right: 130px;
-    max-width: 1440px;
+    margin: 0 auto;
+    padding: 32px 90px 0 90px;
 }
 
-.header{
-    margin-top: 30px;
-}
 .header__content{
     display: flex;
-
 }
 
 .header__logo{
     width: 180px;
     height: 38px;
 }
-
 
 .header__content-mail,.header__content-tel{
     display: flex;
@@ -31,9 +25,13 @@ body{
 
 .header__connect{
     display: flex;
-    justify-content: flex-end;
-    flex-grow: 3;
+    justify-content: space-between;
 }
+
+.header__container{
+    display: flex;
+}
+
 .header__text {
     font-weight: 400;
     font-size: 14px;
@@ -52,4 +50,87 @@ body{
     padding-top: 15px;
     border-top: 0.5px solid black;
     border-radius: 2px;
+}
+.main{
+    margin-top: 100px;
+}
+
+.main__content{
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 60px;
+}
+
+.main__title{
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 72px;
+    max-width: 500px;
+}
+
+.main__text{
+    font-size: 16px;
+    font-weight: 400;
+    max-width: 340px;
+}
+
+.main__img{
+    margin-top: 60px;
+    width: 100%;
+}
+@media (max-width: 1200px) {
+    .header__connect{
+        flex-direction: column;
+        align-items: center;
+    }
+     .header__container{
+         margin-top: 10px;
+     }
+
+     .header__menu-list{
+         flex-wrap: wrap;
+         gap: 10px;
+     }
+
+     .main{
+         margin-top: 30px;
+     }
+
+    .main__title{
+        font-size: 40px;
+        line-height: 35px;
+    }
+
+    .main__img{
+        margin-top: 20px;
+    }
+
+    .main__text{
+        display: none;
+    }
+}
+@media (max-width: 768px) {
+    .header__container{
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .header__content-mail,.header__content-tel{
+        text-align: center;
+        padding: 0;
+    }
+    .main__title{
+        font-size: 25px;
+        line-height: 30px;
+    }
+
+    .main__img{
+        margin-top: 15px;
+    }
+
+    .main__text{
+        display: none;
+    }
 }
