--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('variables.css');
 body{
     margin: 0 auto;
-    padding: 32px 90px 0 90px;
+    padding: 32px 130px 0 130px;
+    max-width: 1440px;
 }
 
 .header__content{
@@ -46,18 +47,40 @@ body{
 .header__menu-list{
     display: flex;
     justify-content: space-between;
-    margin-top: 32px;
-    padding-top: 15px;
+    flex-grow: 1;
+    margin-right: 30px;
+    color: var(--header-menu-list);
+}
+
+.header__navigation{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border-top: 0.5px solid black;
     border-radius: 2px;
+    margin-top: 20px;
+    padding-top: 5px;
 }
+
+.header__nav-contact{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    color: var(--header-text);
+    padding-left: 10px;
+}
+.header__img{
+    width: 15px;
+    height: 15px;
+}
+
 .main{
     margin-top: 100px;
 }
 
 .main__content{
     display: flex;
-    align-items: baseline;
+    align-items: center;
     flex-wrap: wrap;
     gap: 60px;
 }
@@ -67,6 +90,7 @@ body{
     font-weight: 700;
     line-height: 72px;
     max-width: 500px;
+    color: var(--title);
 }
 
 .main__text{
@@ -77,9 +101,46 @@ body{
 
 .main__img{
     margin-top: 60px;
+    max-width: 1180px;
     width: 100%;
 }
+
+.info__company{
+    margin-top: 80px;
+}
+
+.info__title{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 58px;
+    color: var(--title);
+}
+
+.info__content{
+    display: flex;
+    gap: 40px;
+    margin: 30px 0 30px 0;
+}
+
+.info__text{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+}
+.info__images{
+    display: flex;
+    gap: 25px;
+    margin-top: 40px;
+}
+.info__img{
+    max-width: 580px;
+}
+
 @media (max-width: 1200px) {
+    body{
+       padding: 25px 50px 0 50px;
+    }
+
     .header__connect{
         flex-direction: column;
         align-items: center;
@@ -91,6 +152,10 @@ body{
      .header__menu-list{
          flex-wrap: wrap;
          gap: 10px;
+     }
+
+     .header__img, .header__nav-contact{
+         display: none;
      }
 
      .main{
@@ -109,18 +174,52 @@ body{
     .main__text{
         display: none;
     }
+    .info__images{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info__img{
+        max-width: 100%;
+    }
+
+    .info__title{
+        font-size: 40px;
+        line-height: 35px;
+    }
+
+    .info__content{
+        gap: 5px;
+    }
+
+    .info__text{
+        text-align: justify;
+        padding: 10px;
+    }
+
 }
 @media (max-width: 768px) {
+
+    body{
+        padding: 20px 40px 0 40px;
+    }
+
     .header__container{
         flex-direction: column;
         align-items: center;
         gap: 10px;
     }
 
+    .header__logo{
+        width: 130px;
+        height: 30px;
+    }
+
     .header__content-mail,.header__content-tel{
         text-align: center;
         padding: 0;
     }
+
     .main__title{
         font-size: 25px;
         line-height: 30px;
@@ -132,5 +231,26 @@ body{
 
     .main__text{
         display: none;
+    }
+
+    .info__company{
+        margin-top: 30px;
+    }
+
+    .info__title {
+        font-size: 25px;
+        line-height: 30px;
+    }
+
+    .info__text{
+        text-align: justify;
+    }
+
+    .info__content{
+        margin: 10px 0 10px 0;
+    }
+
+    .info__images{
+        margin-top: 10px;
     }
 }
