--- a/variables.css
+++ b/variables.css
@@ -1,5 +1,6 @@
 :root{
---header-text: rgba(96, 124, 230, 1);
---header-menu-list: rgba(51, 51, 51, 1);
---title: rgba(51, 51, 51, 1);
+--accent: rgba(96, 124, 230, 1);
+--dark: rgba(51, 51, 51, 1);
+--lihgt-grey:rgba(245, 245, 245, 1);
+--third:rgba(217, 217, 217, 1);
 }
